@@ -27,6 +27,7 @@ S3method(encoding,corpus)
 S3method(encoding,corpusSource)
 S3method(features,dfm)
 S3method(head,dfm)
+S3method(idf,dfm)
 S3method(kwic,character)
 S3method(kwic,corpus)
 S3method(kwic,tokenizedTexts)
@@ -90,6 +91,7 @@ S3method(tail,dfm)
 S3method(texts,character)
 S3method(texts,corpus)
 S3method(texts,corpusSource)
+S3method(tfidf,dfm)
 S3method(toLower,"NULL")
 S3method(toLower,character)
 S3method(toLower,corpus)
@@ -124,6 +126,7 @@ export(docnames)
 export(docvars)
 export(encoding)
 export(features)
+export(idf)
 export(is.corpus)
 export(is.dfm)
 export(is.tokenizedTexts)
