@@ -1,6 +1,9 @@
 quanteda 0.9.1
 ==============
 
+*  better implementation of tf-idf, and relative frequency weighting, especially for very large sparse
+   matrix objects.
+
 *  textmodel_wordfish() now accepts an integer `dispersionFloor` argument to constrain the phi parameter
    to a minimium value (of underdispersion).
 
